adding under construction message

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title></title>
   </head>
   <body>
-    <h1> hello ! </h1>
+    <h1> Hello! This site is currently under construction and should be finished by May 21st, 2021. See you then!</h1>
   </body>
 </html>
