--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Creative - Start Bootstrap Theme</title>
+        <title>Derya Gumustel - Portfolio</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap Icons-->
@@ -43,7 +43,7 @@
                         <hr class="divider" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 mb-5">Oceanographer turned data scientist, working hard to contribute to our understanding of the world's oceans.</p>
+                        <p class="text-white-75 mb-5">Oceanographer turned data scientist, using Python programming to contribute to our understanding of the world's oceans.</p>
                         <!--<a class="btn btn-primary btn-xl" href="#about">Find Out More</a>-->
                     </div>
                 </div>
