--- a/index.html
+++ b/index.html
@@ -120,15 +120,14 @@
                                     </span>
                                 </a>
                             </li>
-                            <!--
                             <li class="list-inline-item">
-                                <a href="#!">
+                                <a href="https://oceandatascience.medium.com/">
                                     <span class="fa-stack fa-lg">
                                         <i class="fas fa-circle fa-stack-2x"></i>
-                                        <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
+                                        <i class="fab fa-medium fa-stack-1x fa-inverse"></i>
                                     </span>
                                 </a>
-                            </li>-->
+                            </li>
                             <li class="list-inline-item">
                                 <a href="https://github.com/dgumustel">
                                     <span class="fa-stack fa-lg">
