--- a/blog.html
+++ b/blog.html
@@ -47,6 +47,7 @@
                                 <a href="#!">Medium</a>
                                 since March, 2021
                             </span>
+                            <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase" href="https://oceandatascience.medium.com/">Follow me on Medium</a></div>
                         </div>
                     </div>
                 </div>
