added more links to Medium

--- a/blog.html
+++ b/blog.html
@@ -44,7 +44,7 @@
                             <h2 class="subheading">And how you can use Python programming to learn about the oceans</h2>
                             <span class="meta">
                                 Hosted on 
-                                <a href="#!">Medium</a>
+                                <a href="https://oceandatascience.medium.com/">Medium</a>
                                 since March, 2021
                             </span>
                             <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase" href="https://oceandatascience.medium.com/">Follow me on Medium</a></div>
