--- a/blog.html
+++ b/blog.html
@@ -47,7 +47,7 @@
                                 <a href="https://oceandatascience.medium.com/">Medium</a>
                                 since March, 2021
                             </span>
-                            <div class="btn btn-primary text-uppercase"><a class="btn btn-primary text-uppercase" href="https://oceandatascience.medium.com/">Follow me on Medium</a></div>
+                            <div class="d-flex justify-content-start mb-4"><a class="btn btn-primary text-uppercase" href="https://oceandatascience.medium.com/">Follow me on Medium</a></div>
                         </div>
                     </div>
                 </div>
