trying to add blank space

--- a/blog.html
+++ b/blog.html
@@ -47,6 +47,8 @@
                                 <a href="https://oceandatascience.medium.com/">Medium</a>
                                 since March, 2021
                             </span>
+                            <!-- Divider-->
+                            <hr class="my-4" />
                             <div class="d-flex justify-content-start mb-4"><a class="btn btn-primary text-uppercase" href="https://oceandatascience.medium.com/">Follow me on Medium</a></div>
                         </div>
                     </div>
