--- a/blog.html
+++ b/blog.html
@@ -48,7 +48,7 @@
                                 since March, 2021
                             </span>
                             <!-- Divider-->
-                            <hr class="my-4" color=#000000/>
+                            <hr class="my-4" style="background-color:#000000"/>
                             <div class="d-flex justify-content-start mb-4"><a class="btn btn-primary text-uppercase" href="https://oceandatascience.medium.com/">Follow me on Medium</a></div>
                         </div>
                     </div>
