--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="page-heading">
                             <h1>About Me</h1>
-                            <span class="subheading">This is what I do.</span>
+                            <span class="subheading">Pursuing data science for environmental good.</span>
                         </div>
                     </div>
                 </div>
@@ -52,9 +52,9 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
+                        <p>Born and raised in the Pacific Northwest, I've always felt at home in the forested mountains and overcast views of the Pacific. After earning my bachelor's degree in oceanography from the University of Washington in 2020, I earned my certificate in data science through an immersive program from General Assembly in 2021.</p>
+                        <p>I'm currently building a career for myself at the intersection of oceanography and data science, leading me to join an ocean acoustics team at the University of Washington to conduct multi-year analysis of OOI data and help develop open-access tools to make sonar data more accessible to the public.</p>
+                        <p>I care a lot about the environment, but ultimately the most important thing to me is people - the people I live with, the people I work with, and the communities I give back to. I love to learn, I love to help others learn, and I'm always looking for ways to contribute more to the oceanography and data science communities!</p>
                     </div>
                 </div>
             </div>
