added email to php file

--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="page-heading">
                             <h1>Contact Me</h1>
-                            <span class="subheading">Have questions? I'd love to hear them!</span>
+                            <span class="subheading">I'd love to hear from you!</span>
                         </div>
                     </div>
                 </div>
