--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
                         <div class="my-5">
-                            <form action='assets/mail/contact_me.php'>
+                            <form action='assets/mail/contact_me.php' method='POST'>
                                 
                                 <div class="form-floating">
                                     <input class="form-control" id="inputName" type="text" placeholder="Enter your name..." />
