removed contact form
turns out you can't do contact forms like this on github pages

--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,11 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
+                        <p>Want to get in touch? Send me an email or get in touch with me on LinkedIn, I'm always happy to chat!</p>
+                        <p>Email: degumustel@gmail.com</p>
+                        <p>LinkedIn: [Profile](https://www.linkedin.com/in/derya-gumustel/)</p>
+
+                        <!--
                         <div class="my-5">
                             <form action='assets/mail/contact_me.php' method='POST'>
                                 
@@ -73,7 +77,7 @@
                                     <label for="inputMessage">Message</label>
                                 </div>
                                 <br />
-                                <button class="btn btn-primary text-uppercase" type="submit">Send</button >
+                                <button class="btn btn-primary text-uppercase" type="submit">Send</button >-->
                             </form>
                         </div>
                     </div>
