--- a/contact.html
+++ b/contact.html
@@ -53,8 +53,8 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <p>Want to get in touch? Send me an email or get in touch with me on LinkedIn, I'm always happy to chat!</p>
-                        <p>Email: degumustel@gmail.com</p>
-                        <p>LinkedIn: [Profile](https://www.linkedin.com/in/derya-gumustel/)</p>
+                        <a href="degumustel@gmail.com">Email me</a>
+                        <a href="https://www.linkedin.com/in/derya-gumustel/">LinkedIn Profile</a>
 
                         <!--
                         <div class="my-5">
