--- a/contact.html
+++ b/contact.html
@@ -53,9 +53,11 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <p>Want to get in touch? Send me an email or get in touch with me on LinkedIn, I'm always happy to chat!</p>
-                        <a href="degumustel@gmail.com">Email me</a>
-                        <a href="https://www.linkedin.com/in/derya-gumustel/">LinkedIn Profile</a>
-
+                        <p>
+                            Email me at degumustel@gmail.com or click
+                            <a href="https://www.linkedin.com/in/derya-gumustel/">here</a>
+                            to connect with me on LinkedIn!
+                        </p>
                         <!--
                         <div class="my-5">
                             <form action='assets/mail/contact_me.php' method='POST'>
