--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="site-heading">
                             <h1>Derya Gumustel</h1>
-                            <h2 class="subheading">Oceanographer turned Data Scientist.</h2>
+                            <h2 class="subheading">Oceanographer turned Data Scientist</h2>
                             <span class="subheading">Pursuing data science for environmental good from Seattle, WA.</span>
                         </div>
                     </div>
