--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <div class="site-heading">
                             <h1>Derya Gumustel</h1>
                             <h2 class="subheading">Oceanographer turned Data Scientist</h2>
-                            <span class="subheading">Pursuing data science for environmental good from Seattle, WA.</span>
+                            <span class="meta">Pursuing data science for environmental good from Seattle, WA.</span>
                         </div>
                     </div>
                 </div>
