--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <p>Want to get in touch? Send me an email or get in touch with me on LinkedIn, I'm always happy to chat!</p>
                         <p>
-                            Email me at degumustel@gmail.com or click
+                            You can reach me through email at degumustel@gmail.com or click
                             <a href="https://www.linkedin.com/in/derya-gumustel/">here</a>
                             to connect with me on LinkedIn!
                         </p>
