--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<body class="homepage is-preload">
 		<div id="page-wrapper">
 
-			<!-- Header -->
+			<!-- Header
 				<header id="header">
 					<div class="logo container">
 						<div>
@@ -22,7 +22,7 @@
 							<p>A responsive site template by HTML5 UP</p>
 						</div>
 					</div>
-				</header>
+				</header> -->
 
 			<!-- Nav -->
 				<nav id="nav">
