--- a/index.html
+++ b/index.html
@@ -54,9 +54,10 @@
 			<!-- Banner -->
 				<section id="banner">
 					<div class="content">
-						<h2>Welcome to TXT by HTML5 UP</h2>
-						<p>A free responsive site template built on HTML5, CSS3, and some other stuff</p>
-						<a href="#main" class="button scrolly">Alright let's go</a>
+						<p>Hello there! </p>
+						<h2>My name is Derya Gumustel</h2>
+						<p>I'm an oceanographer turned data scientist based in Seattle, WA.</p>
+						<!-- <a href="#main" class="button scrolly">Alright let's go</a> -->
 					</div>
 				</section>
 
