Update index banner content

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 			<!-- Banner -->
 				<section id="banner">
 					<div class="content">
-						<p>Hello there! </p>
-						<h2>My name is Derya Gumustel</h2>
-						<p>I'm an oceanographer turned data scientist based in Seattle, WA.</p>
-						<!-- <a href="#main" class="button scrolly">Alright let's go</a> -->
+						<p>Hello there!</p>
+						<h2>My name is Derya Gumustel.</h2>
+						<p>I'm a data scientist and oceanographer based in Seattle, WA.</p>
+						<a href="#main" class="button scrolly">Welcome!</a>
 					</div>
 				</section>
 
