--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				<section id="banner">
 					<div class="content">
 						<p>Hello there!</p>
-						<h2>My name is Derya Gumustel.</h2>
+						<h2>My name is Derya Gumustel</h2>
 						<p>I'm a data scientist and oceanographer based in Seattle, WA.</p>
 						<a href="#main" class="button scrolly">Welcome!</a>
 					</div>
