--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 	<body class="homepage is-preload">
 		<div id="page-wrapper">
 
-			<!-- Header
+			Header
 				<header id="header">
 					<div class="logo container">
 						<div>
-							<h1><a href="index.html" id="logo">TXT</a></h1>
-							<p>A responsive site template by HTML5 UP</p>
+							<h1><a href="index.html" id="logo">TEST</a></h1>
+							<!-- <p>A responsive site template by HTML5 UP</p> -->
 						</div>
 					</div>
 				</header> -->
 
-			<!-- Nav -->
+			<!-- Nav
 				<nav id="nav">
 					<ul>
 						<li class="current"><a href="index.html">Home</a></li>
