--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 				<header id="header">
 					<div class="logo container">
 						<div>
-							<h1><a href="index.html" id="logo">TEST</a></h1>
+							<h1><a href="index.html" id="logo">TXT</a></h1>
 							<!-- <p>A responsive site template by HTML5 UP</p> -->
 						</div>
 					</div>
-				</header> -->
+				</header>
 
-			<!-- Nav
+			<!-- Nav -->
 				<nav id="nav">
 					<ul>
 						<li class="current"><a href="index.html">Home</a></li>
