Change header text transform to none

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 	<body class="homepage is-preload">
 		<div id="page-wrapper">
 
-			Header
-				<header id="header">
+			<!-- Header -->
+				<!-- <header id="header">
 					<div class="logo container">
 						<div>
-							<h1><a href="index.html" id="logo">TXT</a></h1>
-							<!-- <p>A responsive site template by HTML5 UP</p> -->
+							<a href="index.html" id="logo">Hello</a>
+							<p>and welcome to my portfolio website</p>
 						</div>
 					</div>
-				</header>
+				</header> -->
 
 			<!-- Nav -->
 				<nav id="nav">
@@ -54,7 +54,7 @@
 			<!-- Banner -->
 				<section id="banner">
 					<div class="content">
-						<p>Hello there!</p>
+						<!-- <p>Hello there!</p> -->
 						<h2>My name is Derya Gumustel</h2>
 						<p>I'm a data scientist and oceanographer based in Seattle, WA.</p>
 						<a href="#main" class="button scrolly">Welcome!</a>
