Reorder index menu items

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					<div class="logo container">
 						<div>
 							<a href="index.html" id="logo">Hello</a>
-							<p>and welcome to my portfolio website</p>
+							<p>and welcome to my website</p>
 						</div>
 					</div>
 				</header> -->
@@ -27,6 +27,9 @@
 			<!-- Nav -->
 				<nav id="nav">
 					<ul>
+						<li><a href="left-sidebar.html">Left Sidebar</a></li>
+						<li><a href="right-sidebar.html">Right Sidebar</a></li>
+						<li><a href="no-sidebar.html">No Sidebar</a></li>
 						<li class="current"><a href="index.html">Home</a></li>
 						<li>
 							<a href="#">Dropdown</a>
@@ -45,9 +48,6 @@
 								<li><a href="#">Veroeros feugiat</a></li>
 							</ul>
 						</li>
-						<li><a href="left-sidebar.html">Left Sidebar</a></li>
-						<li><a href="right-sidebar.html">Right Sidebar</a></li>
-						<li><a href="no-sidebar.html">No Sidebar</a></li>
 					</ul>
 				</nav>
 
