--- a/index.html
+++ b/index.html
@@ -27,16 +27,17 @@
 			<!-- Nav -->
 				<nav id="nav">
 					<ul>
-						<li><a href="left-sidebar.html">Left Sidebar</a></li>
-						<li><a href="right-sidebar.html">Right Sidebar</a></li>
-						<li><a href="no-sidebar.html">No Sidebar</a></li>
 						<li class="current"><a href="index.html">Home</a></li>
+						<li><a href="no-sidebar.html">Projects</a></li>
+						<li><a href="left-sidebar.html">Blog</a></li>
+						<li><a href="no-sidebar.html">About</a></li>
+						<!-- <li><a href="right-sidebar.html">Right Sidebar</a></li> -->
 						<li>
-							<a href="#">Dropdown</a>
+							<a href="#">Just for fun</a>
 							<ul>
-								<li><a href="#">Lorem ipsum dolor</a></li>
-								<li><a href="#">Magna phasellus</a></li>
-								<li>
+								<li><a href="#">Fun graphs</a></li>
+								<li><a href="#">Paintings</a></li>
+								<!-- <li>
 									<a href="#">Phasellus consequat</a>
 									<ul>
 										<li><a href="#">Lorem ipsum dolor</a></li>
@@ -45,7 +46,7 @@
 										<li><a href="#">Etiam dolore nisl</a></li>
 									</ul>
 								</li>
-								<li><a href="#">Veroeros feugiat</a></li>
+								<li><a href="#">Veroeros feugiat</a></li> -->
 							</ul>
 						</li>
 					</ul>
