--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 				<nav id="nav">
 					<ul>
 						<li class="current"><a href="index.html">Home</a></li>
-						<li><a href="no-sidebar.html">Projects</a></li>
-						<li><a href="left-sidebar.html">Blog</a></li>
-						<li><a href="no-sidebar.html">About</a></li>
+						<li><a href="projects.html">Projects</a></li>
+						<li><a href="blog.html">Blog</a></li>
+						<li><a href="about.html">About me</a></li>
 						<!-- <li><a href="right-sidebar.html">Right Sidebar</a></li> -->
 						<li>
-							<a href="#">Just for fun</a>
+							<a href="fun.html">Just for fun</a>
 							<ul>
 								<li><a href="#">Fun graphs</a></li>
 								<li><a href="#">Paintings</a></li>
