--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
 								<!-- Highlight -->
 									<section class="box highlight">
 										<ul class="special">
-											<li><a href="#" class="icon solid fa-search"><span class="label">Magnifier</span></a></li>
+											<li><a href="#" class="icon solid fa-search"><span class="label">Magnifier</span></a><p>test 1</p></li>
+											<p>test 2</p>
 											<li><a href="#" class="icon solid fa-tablet-alt"><span class="label">Tablet</span></a></li>
 											<li><a href="#" class="icon solid fa-flask"><span class="label">Flask</span></a></li>
 											<li><a href="#" class="icon solid fa-cog"><span class="label">Cog?</span></a></li>
