Update index major headings

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 								<!-- Features -->
 									<section class="box features">
-										<h2 class="major"><span>A Major Heading</span></h2>
+										<h2 class="major"><span>Data Science Projects</span></h2>
 										<div>
 											<div class="row">
 												<div class="col-3 col-6-medium col-12-small">
@@ -162,7 +162,7 @@
 
 								<!-- Blog -->
 									<section class="box blog">
-										<h2 class="major"><span>Another Major Heading</span></h2>
+										<h2 class="major"><span>Blog Posts</span></h2>
 										<div>
 											<div class="row">
 												<div class="col-9 col-12-medium">
