Testing text locations

--- a/index.html
+++ b/index.html
@@ -72,10 +72,9 @@
 									<section class="box highlight">
 										<ul class="special">
 											<li><a href="#" class="icon solid fa-search"><span class="label">Magnifier</span></a><p>test 1</p></li>
-											<p>test 2</p>
-											<li><a href="#" class="icon solid fa-tablet-alt"><span class="label">Tablet</span></a></li>
-											<li><a href="#" class="icon solid fa-flask"><span class="label">Flask</span></a></li>
-											<li><a href="#" class="icon solid fa-cog"><span class="label">Cog?</span></a></li>
+											<li><a href="#" class="icon solid fa-tablet-alt"><span class="label">Tablet</span></a><p>test 2</p></li>
+											<li><a href="#" class="icon solid fa-flask"><span class="label">Flask</span></a><p>test 3</p></li>
+											<li><a href="#" class="icon solid fa-cog"><span class="label">Cog?</span></a><p>test 4</p></li>
 										</ul>
 										<header>
 											<h2>A random assortment of icons in circles</h2>
