Index remove icons, add about me TODO

--- a/index.html
+++ b/index.html
@@ -70,19 +70,19 @@
 
 								<!-- Highlight -->
 									<section class="box highlight">
-										<ul class="special">
-											<li><a href="#" class="icon solid fa-search"><span class="label">Magnifier</span></a><p>test 1</p></li>
-											<li><a href="#" class="icon solid fa-tablet-alt"><span class="label">Tablet</span></a><p>test 2</p></li>
-											<li><a href="#" class="icon solid fa-flask"><span class="label">Flask</span></a><p>test 3</p></li>
-											<li><a href="#" class="icon solid fa-cog"><span class="label">Cog?</span></a><p>test 4</p></li>
-										</ul>
+										<!-- <ul class="special">
+											<li><a href="#" class="icon solid fa-search"><span class="label">Magnifier</span></a><p>Label 1</p></li>
+											<li><a href="#" class="icon solid fa-tablet-alt"><span class="label">Tablet</span></a><p>Label 2</p></li>
+											<li><a href="#" class="icon solid fa-flask"><span class="label">Flask</span></a><p>Label 3</p></li>
+											<li><a href="#" class="icon solid fa-cog"><span class="label">Cog?</span></a><p>Label 4</p></li>
+										</ul> -->
 										<header>
-											<h2>A random assortment of icons in circles</h2>
-											<p>And some text that attempts to explain their significance</p>
+											<!-- <h2>A random assortment of icons in circles</h2>
+											<p>And some text that attempts to explain their significance</p> -->
 										</header>
 										<p>
-											Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus. Praesent semper mod quis eget mi. Etiam eu<br />
-											ante risus. Aliquam erat volutpat. Aliquam luctus et mattis lectus amet pulvinar. Nam nec turpis consequat.
+											Put a blurb about myself here! <br />
+											
 										</p>
 									</section>
 
