--- a/projects.html
+++ b/projects.html
@@ -225,7 +225,7 @@
 											<li><a class="icon brands fa-twitter" href="#"><span class="label">Twitter</span></a></li>
 											<li><a class="icon brands fa-instagram" href="#"><span class="label">Instagram</span></a></li>
 											<li><a class="icon brands fa-dribbble" href="#"><span class="label">Dribbble</span></a></li> -->
-											<li><a class="icon brands fa-linkedin-in" href="#"><span class="label">LinkedIn</span></a></li>
+											<li><a class="icon brands fa-linkedin-in" href="https://www.linkedin.com/in/derya-gumustel/"><span class="label">LinkedIn</span></a></li>
 										</ul>
 									</section>
 
