Update index project subheadings

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 													<!-- Feature -->
 														<section class="box feature">
 															<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-															<h3><a href="#">A Subheading</a></h3>
+															<h3><a href="#">Time-series Decomposition</a></h3>
 															<p>
 																Phasellus quam turpis, feugiat sit amet ornare in, a hendrerit in
 																lectus dolore. Praesent semper mod quis eget sed etiam eu ante risus.
@@ -112,7 +112,7 @@
 													<!-- Feature -->
 														<section class="box feature">
 															<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-															<h3><a href="#">Another Subheading</a></h3>
+															<h3><a href="#">Predictive Modeling</a></h3>
 															<p>
 																Phasellus quam turpis, feugiat sit amet ornare in, a hendrerit in
 																lectus dolore. Praesent semper mod quis eget sed etiam eu ante risus.
@@ -125,7 +125,7 @@
 													<!-- Feature -->
 														<section class="box feature">
 															<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-															<h3><a href="#">And Another</a></h3>
+															<h3><a href="#">Computer Vision</a></h3>
 															<p>
 																Phasellus quam turpis, feugiat sit amet ornare in, a hendrerit in
 																lectus dolore. Praesent semper mod quis eget sed etiam eu ante risus.
@@ -138,7 +138,7 @@
 													<!-- Feature -->
 														<section class="box feature">
 															<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-															<h3><a href="#">And One More</a></h3>
+															<h3><a href="#">Natural Language Processing</a></h3>
 															<p>
 																Phasellus quam turpis, feugiat sit amet ornare in, a hendrerit in
 																lectus dolore. Praesent semper mod quis eget sed etiam eu ante risus.
