--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 							<ul>
 								<li><a href="#">Fun graphs</a></li>
 								<li><a href="#">Paintings</a></li>
+								<li><a href="#">Game jams</a></li>
 								<!-- <li>
 									<a href="#">Phasellus consequat</a>
 									<ul>
