--- a/fun.html
+++ b/fun.html
@@ -27,7 +27,8 @@
 			<!-- Nav -->
 				<nav id="nav">
 					<ul>
-						<li class="current"><a href="index.html">Home</a></li>
+						<li class="current"><a href="index.html">Home</a></li> 
+						<!-- TODO: Do I need to change this current class to be href="fun.html"? -->
 						<li><a href="projects.html">Projects</a></li>
 						<li><a href="blog.html">Blog</a></li>
 						<li><a href="about.html">About me</a></li>
