Add TODO on projects page

--- a/projects.html
+++ b/projects.html
@@ -19,6 +19,7 @@
 					<div class="logo container">
 						<div>
 							<h1><a href="projects.html" id="logo">Projects</a></h1>
+							<!-- TODO: Should I change this page to Portfolio instead of Projects? -->
 							<p>In Data Science and Oceanography</p>
 						</div>
 					</div>
