Update TODO on fun page

--- a/fun.html
+++ b/fun.html
@@ -28,7 +28,7 @@
 				<nav id="nav">
 					<ul>
 						<li class="current"><a href="index.html">Home</a></li> 
-						<!-- TODO: Do I need to change this current class to be href="fun.html"? -->
+						<!-- TODO: Do I need to move this "current" class label to the current page below? -->
 						<li><a href="projects.html">Projects</a></li>
 						<li><a href="blog.html">Blog</a></li>
 						<li><a href="about.html">About me</a></li>
