--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@
 											<li><a class="icon brands fa-instagram" href="#"><span class="label">Instagram</span></a></li>
 											<li><a class="icon brands fa-dribbble" href="#"><span class="label">Dribbble</span></a></li> -->
 											<li><a class="icon brands fa-linkedin-in" href="https://www.linkedin.com/in/derya-gumustel/"><span class="label">LinkedIn</span></a></li>
+											<!-- TODO: Add GitHub icon + link -->
 										</ul>
 									</section>
 
