Update projects page to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Projects</title>
+		<title>Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,9 +18,8 @@
 				<header id="header">
 					<div class="logo container">
 						<div>
-							<h1><a href="projects.html" id="logo">Projects</a></h1>
-							<!-- TODO: Should I change this page to Portfolio instead of Projects? -->
-							<p>In Data Science and Oceanography</p>
+							<h1><a href="portfolio.html" id="logo">Portfolio</a></h1>
+							<p>Projects In Data Science and Oceanography</p>
 						</div>
 					</div>
 				</header>
@@ -29,7 +28,7 @@
 				<nav id="nav">
 					<ul>
 						<li class="current"><a href="index.html">Home</a></li>
-						<li><a href="projects.html">Projects</a></li>
+						<li><a href="portfolio.html">Portfolio</a></li>
 						<li><a href="blog.html">Blog</a></li>
 						<li><a href="about.html">About me</a></li>
 						<li>
