Update nav to portfolio on all pages

--- a/fun.html
+++ b/fun.html
@@ -29,7 +29,7 @@
 					<ul>
 						<li class="current"><a href="index.html">Home</a></li> 
 						<!-- TODO: Do I need to move this "current" class label to the current page below? -->
-						<li><a href="projects.html">Projects</a></li>
+						<li><a href="portfolio.html">Portfolio</a></li>
 						<li><a href="blog.html">Blog</a></li>
 						<li><a href="about.html">About me</a></li>
 						<li>
