Add project descriptions to index

--- a/index.html
+++ b/index.html
@@ -91,8 +91,9 @@
 															<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 															<h3><a href="#">Time-series Decomposition</a></h3>
 															<p>
-																Phasellus quam turpis, feugiat sit amet ornare in, a hendrerit in
-																lectus dolore. Praesent semper mod quis eget sed etiam eu ante risus.
+																Using dimensionality reduction methods to find seasonal 
+																patterns in time-series water column data from the Northern 
+																California Current system. 
 															</p>
 														</section>
 
@@ -104,8 +105,8 @@
 															<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 															<h3><a href="#">Predictive Modeling</a></h3>
 															<p>
-																Phasellus quam turpis, feugiat sit amet ornare in, a hendrerit in
-																lectus dolore. Praesent semper mod quis eget sed etiam eu ante risus.
+																Classifying coastal upwelling with machine learning models
+																and water column temperature in Oregon, WA.
 															</p>
 														</section>
 
@@ -117,8 +118,8 @@
 															<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 															<h3><a href="#">Computer Vision</a></h3>
 															<p>
-																Phasellus quam turpis, feugiat sit amet ornare in, a hendrerit in
-																lectus dolore. Praesent semper mod quis eget sed etiam eu ante risus.
+																Training computer vision models to recognize face masks 
+																in the pandemic.
 															</p>
 														</section>
 
@@ -130,8 +131,8 @@
 															<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
 															<h3><a href="#">Natural Language Processing</a></h3>
 															<p>
-																Phasellus quam turpis, feugiat sit amet ornare in, a hendrerit in
-																lectus dolore. Praesent semper mod quis eget sed etiam eu ante risus.
+																Sentiment analysis and classification of Reddit posts using 
+																NLP packages.
 															</p>
 														</section>
 
