Update index portfolio/blog buttons

--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
 												</div>
 												<div class="col-12">
 													<ul class="actions">
-														<li><a href="#" class="button large">Do Something</a></li>
-														<li><a href="#" class="button alt large">Think About It</a></li>
+														<li><a href="portfolio.html" class="button large">See Portfolio</a></li>
+														<li><a href="#main" class="button scrolly">Continue to Blog</a></li>
 													</ul>
 												</div>
 											</div>
