Add TODO's to index page

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 										<div>
 											<div class="row">
 												<div class="col-3 col-6-medium col-12-small">
+													<!-- TODO: Update images in featured projects below -->
 
 													<!-- Feature -->
 														<section class="box feature">
@@ -141,6 +142,7 @@
 													<ul class="actions">
 														<li><a href="portfolio.html" class="button large">See Portfolio</a></li>
 														<li><a href="#main" class="button scrolly">Continue to Blog</a></li>
+														<!-- TODO: Does this scrolly button work? -->
 													</ul>
 												</div>
 											</div>
