Add TODO's to index, update archives link

--- a/index.html
+++ b/index.html
@@ -187,6 +187,8 @@
 													<div class="sidebar">
 
 														<!-- Archives -->
+														<!-- TODO: Can I add little tags to these posts, like "tutorial", "oceanography", etc? -->
+														<!-- TODO: Edit times, comments, and links to posts below. -->
 															<ul class="divided">
 																<li>
 																	<article class="box post-summary">
@@ -234,7 +236,8 @@
 																	</article> -->
 																</li>
 															</ul>
-															<a href="#" class="button alt">Archives</a>
+															<a href="blog.html" class="button alt">Archives</a>
+															<!-- TODO: Create an archive for my posts once I have more. Maybe just link this to blog page for now. -->
 
 													</div>
 												</div>
