--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
 													<div class="content">
 
 														<!-- Featured Post -->
+														<!-- TODO: Edit time, comments, image, and links in this featured post -->
 															<article class="box post">
 																<header>
 																	<h3><a href="#">Introduction to Ocean Data</a></h3>
@@ -172,11 +173,7 @@
 																</header>
 																<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
 																<p>
-																	Phasellus quam turpis, feugiat sit amet ornare in, a hendrerit in lectus. Praesent
-																	semper mod quis eget mi. Etiam sed ante risus aliquam erat et volutpat. Praesent a
-																	dapibus velit. Curabitur sed nisi nunc, accumsan vestibulum lectus. Lorem ipsum
-																	dolor sit non aliquet sed, tempor et dolor. Praesent a dapibus velit. Curabitur
-																	accumsan.
+																	Add a paragraph about this blog post here 
 																</p>
 																<a href="#" class="button">Continue Reading</a>
 															</article>
