Change portfolio and blog buttons back to large class

--- a/index.html
+++ b/index.html
@@ -140,9 +140,8 @@
 												</div>
 												<div class="col-12">
 													<ul class="actions">
-														<li><a href="portfolio.html" class="button medium">See Portfolio</a></li>
-														<li><a href="#main" class="button scrolly">Continue to Blog</a></li>
-														<!-- TODO: Does this scrolly button work? -->
+														<li><a href="portfolio.html" class="button large">See Portfolio</a></li>
+														<li><a href="blog.html" class="button large">Read Blog</a></li>
 													</ul>
 												</div>
 											</div>
