--- a/portfolio.html
+++ b/portfolio.html
@@ -27,8 +27,8 @@
 			<!-- Nav -->
 				<nav id="nav">
 					<ul>
-						<li class="current"><a href="index.html">Home</a></li>
-						<li><a href="portfolio.html">Portfolio</a></li>
+						<li><a href="index.html">Home</a></li>
+						<li class="current"><a href="portfolio.html">Portfolio</a></li>
 						<li><a href="blog.html">Blog</a></li>
 						<li><a href="about.html">About me</a></li>
 						<li>
