Update blog logo header

--- a/blog.html
+++ b/blog.html
@@ -19,7 +19,7 @@
 					<div class="logo container">
 						<div>
 							<h1><a href="blog.html" id="logo">Blog</a></h1>
-							<p>Science Communication and Topics in Data Science and Oceanography</p>
+							<p>Tutorials, Literature Reviews, and Science Communication</p>
 						</div>
 					</div>
 				</header>
