--- a/blog.html
+++ b/blog.html
@@ -27,9 +27,9 @@
 			<!-- Nav -->
 				<nav id="nav">
 					<ul>
-						<li class="current"><a href="index.html">Home</a></li>
+						<li><a href="index.html">Home</a></li>
 						<li><a href="portfolio.html">Portfolio</a></li>
-						<li><a href="blog.html">Blog</a></li>
+						<li class="current"><a href="blog.html">Blog</a></li>
 						<li><a href="about.html">About me</a></li>
 						<li>
 							<a href="fun.html">Just for fun</a>
