--- a/fun.html
+++ b/fun.html
@@ -27,12 +27,11 @@
 			<!-- Nav -->
 				<nav id="nav">
 					<ul>
-						<li class="current"><a href="index.html">Home</a></li> 
-						<!-- TODO: Do I need to move this "current" class label to the current page below? -->
+						<li><a href="index.html">Home</a></li> 
 						<li><a href="portfolio.html">Portfolio</a></li>
 						<li><a href="blog.html">Blog</a></li>
 						<li><a href="about.html">About me</a></li>
-						<li>
+						<li class="current">
 							<a href="fun.html">Just for fun</a>
 							<ul>
 								<li><a href="#">Fun graphs</a></li>
