--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
 							<ul>
 								<li><a href="#">Fun graphs</a></li>
 								<li><a href="#">Paintings</a></li>
-								<li><a href="#">Game jams</a></li>
+								<li><a href="#">Side projects</a></li>
 							</ul>
 						</li>
 					</ul>
