Minor wording edit on index

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 															<h3><a href="#">Natural Language Processing</a></h3>
 															<p>
 																Sentiment analysis and classification of Reddit posts using 
-																NLP packages.
+																NLP packages in Python.
 															</p>
 														</section>
 
