Edit just for fun logo header

--- a/fun.html
+++ b/fun.html
@@ -19,7 +19,7 @@
 					<div class="logo container">
 						<div>
 							<h1><a href="fun.html" id="logo">Just for Fun</a></h1>
-							<p>Hobbies and Side Projects</p>
+							<p>Side Projects and Hobbies</p>
 						</div>
 					</div>
 				</header>
