--- a/index.html
+++ b/index.html
@@ -158,18 +158,18 @@
 														<!-- TODO: Edit time, comments, image, and links in this featured post -->
 															<article class="box post">
 																<header>
-																	<h3><a href="#">Introduction to Ocean Data</a></h3>
-																	<p>With a smaller subtitle that attempts to elaborate</p>
+																	<h3><a href="blog.html">An Introduction to Ocean Data</a></h3>
+																	<p>And to the wonderful field of oceanography</p>
 																	<ul class="meta">
 																		<li class="icon fa-clock">15 minutes ago</li>
-																		<li class="icon fa-comments"><a href="#">8</a></li>
+																		<!-- <li class="icon fa-comments"><a href="#">8</a></li> -->
 																	</ul>
 																</header>
-																<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+																<a href="blog.html" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
 																<p>
 																	Add a paragraph about this blog post here 
 																</p>
-																<a href="#" class="button">Continue Reading</a>
+																<a href="blog.html" class="button">Continue Reading</a>
 															</article>
 
 													</div>
@@ -186,7 +186,7 @@
 																		<h3><a href="#">Mapping Sea Surface Chlorophyll</a></h3>
 																		<ul class="meta">
 																			<li class="icon fa-clock">6 hours ago</li>
-																			<li class="icon fa-comments"><a href="#">34</a></li>
+																			<!-- <li class="icon fa-comments"><a href="#">34</a></li> -->
 																		</ul>
 																	</article>
 																</li>
@@ -195,7 +195,7 @@
 																		<h3><a href="#">Coastal Upwelling pt 2</a></h3>
 																		<ul class="meta">
 																			<li class="icon fa-clock">9 hours ago</li>
-																			<li class="icon fa-comments"><a href="#">27</a></li>
+																			<!-- <li class="icon fa-comments"><a href="#">27</a></li> -->
 																		</ul>
 																	</article>
 																</li>
@@ -204,7 +204,7 @@
 																		<h3><a href="#">Coastal Upwelling pt 1</a></h3>
 																		<ul class="meta">
 																			<li class="icon fa-clock">Yesterday</li>
-																			<li class="icon fa-comments"><a href="#">184</a></li>
+																			<!-- <li class="icon fa-comments"><a href="#">184</a></li> -->
 																		</ul>
 																	</article>
 																</li>
@@ -213,7 +213,7 @@
 																		<h3><a href="#">Domain Knowledge</a></h3>
 																		<ul class="meta">
 																			<li class="icon fa-clock">2 days ago</li>
-																			<li class="icon fa-comments"><a href="#">286</a></li>
+																			<!-- <li class="icon fa-comments"><a href="#">286</a></li> -->
 																		</ul>
 																	</article>
 																</li>
