Update index featured blog post blurb

--- a/index.html
+++ b/index.html
@@ -155,19 +155,29 @@
 													<div class="content">
 
 														<!-- Featured Post -->
-														<!-- TODO: Edit time, comments, image, and links in this featured post -->
+														<!-- TODO: Edit time, image, and links in this featured post -->
 															<article class="box post">
 																<header>
 																	<h3><a href="blog.html">An Introduction to Ocean Data</a></h3>
-																	<p>And to the wonderful field of oceanography</p>
+																	<p>And the wonderful field of oceanography</p>
 																	<ul class="meta">
-																		<li class="icon fa-clock">15 minutes ago</li>
+																		<li class="icon fa-clock">March 26, 2021</li>
 																		<!-- <li class="icon fa-comments"><a href="#">8</a></li> -->
 																	</ul>
 																</header>
 																<a href="blog.html" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
 																<p>
-																	Add a paragraph about this blog post here 
+																	What is oceanography, and why would an oceanographer need to learn how to code? 
+																	Oceanographers study the Earth's oceans through the lenses of four main disciplines: 
+																	biology, chemistry, geology, and physics. The oceans cover over 70% of the Earth's surface, 
+																	which naturally means that oceanographers have to gather vast collections of data to make 
+																	meaningful discoveries. In fact, we're collecting so much data that we're 
+																	struggling to efficiently analyze all of it with current methods. This becomes more true 
+																	with every additional scientific satellite, float, and autonomous vehicle we deploy. 
+																	Many programmers and oceanographers alike are tackling 
+																	this problem by working towards innovative solutions in data science to allow researchers 
+																	to make full use of their ever-expanding datasets. 
+
 																</p>
 																<a href="blog.html" class="button">Continue Reading</a>
 															</article>
