--- a/index.html
+++ b/index.html
@@ -171,12 +171,14 @@
 																	Oceanographers study the Earth's oceans through the lenses of four main disciplines: 
 																	biology, chemistry, geology, and physics. The oceans cover over 70% of the Earth's surface, 
 																	which naturally means that oceanographers have to gather vast collections of data to make 
-																	meaningful discoveries. In fact, we're collecting so much data that we're 
+																	meaningful discoveries. 
+																	
+																	<!-- In fact, we're collecting so much data that we're 
 																	struggling to efficiently analyze all of it with current methods. This becomes more true 
 																	with every additional scientific satellite, float, and autonomous vehicle we deploy. 
 																	Many programmers and oceanographers alike are tackling 
 																	this problem by working towards innovative solutions in data science to allow researchers 
-																	to make full use of their ever-expanding datasets. 
+																	to make full use of their ever-expanding datasets.  -->
 
 																</p>
 																<a href="blog.html" class="button">Continue Reading</a>
