Update portfolio nav to dropdown on index

--- a/index.html
+++ b/index.html
@@ -28,7 +28,18 @@
 				<nav id="nav">
 					<ul>
 						<li class="current"><a href="index.html">Home</a></li>
-						<li><a href="portfolio.html">Portfolio</a></li>
+						<li>
+							<a href="portfolio.html">Portfolio</a>
+							<ul>
+								<li><a href="#">Time-Series Decomposition</a></li>
+								<li><a href="#">Predictive Modeling</a></li>
+								<li><a href="#">Computer Vision</a></li>
+								<li><a href="#">Natural Language Processing</a></li>
+								<li><a href="#">Data Analysis</a></li>
+							</ul>
+						</li>
+						<!-- TODO: Consider making the Portfolio menu a dropdown with different projects listed -->
+						<!-- Things like time series decomposition, predictive modeling, computer vision, natural language processing -->
 						<li><a href="blog.html">Blog</a></li>
 						<li><a href="about.html">About me</a></li>
 						<li>
