Update portfolio nav to dropdown on all pages

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 								<li><a href="#">Computer Vision</a></li>
 								<li><a href="#">Natural Language Processing</a></li>
 								<li><a href="#">Data Analysis</a></li>
+								<!-- TODO: Can I change the color of the dropdown menu to light green? -->
 							</ul>
 						</li>
 						<!-- TODO: Consider making the Portfolio menu a dropdown with different projects listed -->
