--- a/fun.html
+++ b/fun.html
@@ -28,7 +28,15 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li> 
-						<li><a href="portfolio.html">Portfolio</a></li>
+						<li><a href="portfolio.html">Portfolio</a>
+							<ul>
+								<li><a href="#">Time-Series Decomposition</a></li>
+								<li><a href="#">Predictive Modeling</a></li>
+								<li><a href="#">Computer Vision</a></li>
+								<li><a href="#">Natural Language Processing</a></li>
+								<li><a href="#">Data Analysis</a></li>
+							</ul>
+						</li>
 						<li><a href="blog.html">Blog</a></li>
 						<li><a href="about.html">About me</a></li>
 						<li class="current">
