--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 						<li>
 							<a href="portfolio.html">Portfolio</a>
 							<ul>
-								<li><a href="#">Time-Series Decomposition</a></li>
-								<li><a href="#">Predictive Modeling</a></li>
-								<li><a href="#">Computer Vision</a></li>
-								<li><a href="#">Natural Language Processing</a></li>
-								<li><a href="#">Data Analysis</a></li>
+								<li><a href="portfolio.html">Time-Series Decomposition</a></li>
+								<li><a href="portfolio/predmodeling.html">Predictive Modeling</a></li>
+								<li><a href="portfolio/compvision.html">Computer Vision</a></li>
+								<li><a href="portfolio/nlp.html">Natural Language Processing</a></li>
+								<li><a href="portfolio/analysis.html">Data Analysis</a></li>
 								<!-- TODO: Can I change the color of the dropdown menu to light green? -->
 							</ul>
 						</li>
