Update nav on portfolio/predmodeling page

--- a/portfolio/predmodeling.html
+++ b/portfolio/predmodeling.html
@@ -18,38 +18,38 @@
 				<header id="header">
 					<div class="logo container">
 						<div>
-							<h1><a href="index.html" id="logo">TXT</a></h1>
+							<h1><a href="#" id="logo">TXT</a></h1>
 							<p>A responsive site template by HTML5 UP</p>
 						</div>
 					</div>
 				</header>
 
 			<!-- Nav -->
-				<nav id="nav">
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li>
-							<a href="#">Dropdown</a>
-							<ul>
-								<li><a href="#">Lorem ipsum dolor</a></li>
-								<li><a href="#">Magna phasellus</a></li>
-								<li>
-									<a href="#">Phasellus consequat</a>
-									<ul>
-										<li><a href="#">Lorem ipsum dolor</a></li>
-										<li><a href="#">Phasellus consequat</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam dolore nisl</a></li>
-									</ul>
-								</li>
-								<li><a href="#">Veroeros feugiat</a></li>
-							</ul>
-						</li>
-						<li><a href="left-sidebar.html">Left Sidebar</a></li>
-						<li><a href="right-sidebar.html">Right Sidebar</a></li>
-						<li class="current"><a href="no-sidebar.html">No Sidebar</a></li>
-					</ul>
-				</nav>
+			<nav id="nav">
+				<ul>
+					<li><a href="../index.html">Home</a></li>
+					<li class="current">
+						<a href="../portfolio.html">Portfolio</a>
+						<ul>
+							<li><a href="../portfolio.html">Time-Series Decomposition</a></li>
+							<li><a href="predmodeling.html">Predictive Modeling</a></li>
+							<li><a href="compvision.html">Computer Vision</a></li>
+							<li><a href="nlp.html">Natural Language Processing</a></li>
+							<li><a href="analysis.html">Data Analysis</a></li>
+						</ul>
+					</li>
+					<li><a href="../blog.html">Blog</a></li>
+					<li><a href="../about.html">About me</a></li>
+					<li>
+						<a href="../fun.html">Just for fun</a>
+						<ul>
+							<li><a href="#">Side projects</a></li>
+							<li><a href="#">Paintings</a></li>
+							<li><a href="#">Fun graphs</a></li>
+						</ul>
+					</li>
+				</ul>
+			</nav>
 
 			<!-- Main -->
 				<section id="main">
