--- a/portfolio/predmodeling.html
+++ b/portfolio/predmodeling.html
@@ -28,14 +28,13 @@
 			<nav id="nav">
 				<ul>
 					<li><a href="../index.html">Home</a></li>
-					<li class="current">
-						<a href="../portfolio.html">Portfolio</a>
+					<li class="current"><a href="../portfolio.html">Portfolio</a>
 						<ul>
-							<li><a href="../portfolio.html">Time-Series Decomposition</a></li>
-							<li><a href="predmodeling.html">Predictive Modeling</a></li>
-							<li><a href="compvision.html">Computer Vision</a></li>
-							<li><a href="nlp.html">Natural Language Processing</a></li>
-							<li><a href="analysis.html">Data Analysis</a></li>
+							<li><a href="#">Time-Series Decomposition</a></li>
+							<li><a href="#">Predictive Modeling</a></li>
+							<li><a href="#">Computer Vision</a></li>
+							<li><a href="#">Natural Language Processing</a></li>
+							<li><a href="#">Data Analysis</a></li>
 						</ul>
 					</li>
 					<li><a href="../blog.html">Blog</a></li>
