Update nav href's on most pages

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 						<li>
 							<a href="fun.html">Just for fun</a>
 							<ul>
-								<li><a href="#">Side projects</a></li>
-								<li><a href="#">Paintings</a></li>
-								<li><a href="#">Fun graphs</a></li>
+								<li><a href="funstuff/sideprojects.html">Side projects</a></li>
+								<li><a href="funstuff/painting.html">Paintings</a></li>
+								<li><a href="funstuff/fungraphs.html">Fun graphs</a></li>
 							</ul>
 						</li>
 					</ul>
