--- a/portfolio/compvision.html
+++ b/portfolio/compvision.html
@@ -30,11 +30,11 @@
 					<li><a href="../index.html">Home</a></li>
 					<li class="current"><a href="../portfolio.html">Portfolio</a>
 						<ul>
-							<li><a href="#">Time-Series Decomposition</a></li>
-							<li><a href="#">Predictive Modeling</a></li>
-							<li><a href="#">Computer Vision</a></li>
-							<li><a href="#">Natural Language Processing</a></li>
-							<li><a href="#">Data Analysis</a></li>
+							<li><a href="../portfolio.html">Time-Series Decomposition</a></li>
+							<li><a href="predmodeling.html">Predictive Modeling</a></li>
+							<li><a href="compvision.html">Computer Vision</a></li>
+							<li><a href="nlp.html">Natural Language Processing</a></li>
+							<li><a href="analysis.html">Data Analysis</a></li>
 						</ul>
 					</li>
 					<li><a href="../blog.html">Blog</a></li>
@@ -42,9 +42,9 @@
 					<li>
 						<a href="../fun.html">Just for fun</a>
 						<ul>
-							<li><a href="#">Side projects</a></li>
-							<li><a href="#">Paintings</a></li>
-							<li><a href="#">Fun graphs</a></li>
+							<li><a href="../funstuff/sideprojects.html">Side projects</a></li>
+							<li><a href="../funstuff/painting.html">Paintings</a></li>
+							<li><a href="../funstuff/fungraphs.html">Fun graphs</a></li>
 						</ul>
 					</li>
 				</ul>
