--- a/fun.html
+++ b/fun.html
@@ -43,7 +43,7 @@
 							<a href="fun.html">Just for fun</a>
 							<ul>
 								<li><a href="funstuff/sideprojects.html">Side projects</a></li>
-								<li><a href="funstuff/painting.html">Paintings</a></li>
+								<li><a href="funstuff/paintings.html">Paintings</a></li>
 								<li><a href="funstuff/fungraphs.html">Fun graphs</a></li>
 							</ul>
 						</li>
