--- a/funstuff/sideprojects.html
+++ b/funstuff/sideprojects.html
@@ -43,7 +43,7 @@
 						<a href="../fun.html">Just for fun</a>
 						<ul>
 							<li><a href="sideprojects.html">Side projects</a></li>
-							<li><a href="painting.html">Paintings</a></li>
+							<li><a href="paintings.html">Paintings</a></li>
 							<li><a href="fungraphs.html">Fun graphs</a></li>
 						</ul>
 					</li>
