Add header TODO to index

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 	<body class="homepage is-preload">
 		<div id="page-wrapper">
 
+
+			<!-- TODO: Fix this header - with it commented out, the mobile site has "UNDEFINED" at the top of the home page -->
 			<!-- Header -->
 				<!-- <header id="header">
 					<div class="logo container">
