Minor edits to index

--- a/index.html
+++ b/index.html
@@ -41,8 +41,6 @@
 								<!-- TODO: Can I change the color of the dropdown menu to light green? -->
 							</ul>
 						</li>
-						<!-- TODO: Consider making the Portfolio menu a dropdown with different projects listed -->
-						<!-- Things like time series decomposition, predictive modeling, computer vision, natural language processing -->
 						<li><a href="blog.html">Blog</a></li>
 						<li><a href="about.html">About me</a></li>
 						<li>
@@ -85,7 +83,7 @@
 											<p>And some text that attempts to explain their significance</p> -->
 										</header>
 										<p>
-											Put a blurb about myself here! <br />
+											Put a blurb about myself here <br />
 											
 										</p>
 									</section>
@@ -121,7 +119,7 @@
 															<h3><a href="portfolio/predmodeling.html">Predictive Modeling</a></h3>
 															<p>
 																Classifying coastal upwelling with machine learning models
-																and water column temperature in Oregon, WA.
+																using water column temperature in Oregon, WA.
 															</p>
 														</section>
 
