Update article header on portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -62,11 +62,11 @@
 										<article class="box page-content">
 
 											<header>
-												<h2>No Sidebar</h2>
-												<p>Semper amet scelerisque metus faucibus morbi congue mattis</p>
+												<h2>Time-Series Decomposition</h2>
+												<p>Low-Dimensional representation of temperature and salinity profiles captures seasonal water column variability</p>
 												<ul class="meta">
-													<li class="icon fa-clock">5 days ago</li>
-													<li class="icon fa-comments"><a href="#">1,024</a></li>
+													<li class="icon fa-clock">June 2021 - March 2022</li>
+													<!-- <li class="icon fa-comments"><a href="#">1,024</a></li> -->
 												</ul>
 											</header>
 
